more initial work

--- a/.gitignore
+++ b/.gitignore
@@ -1,94 +1,21 @@
-ott.leaflet.*
-ott.openlayers.*
-otp_report.html
-build-config.json
-router-config.json
-lucene
-*.old
-*-old
-*.urls
-*.v
-*.log
-*.iml
-*.tmp
-*.obj
-*.out
-*.osm
-*.pid
-call/
-call-test/
-prod/
-test/
-ned/
-tmp/
-cache/
-osmosis/
-.git/
-tests/
-*~
-[a-z].py
-*.py[cod]
-.settings
-COMMIT_EDITMSG
-*.zip
-*.old
+*.class
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
 *.jar
-.*#
-.#*
-*#
-#*
-.idea
-.idea/*
-*.iml
-.DS_Store
-c:/
+*.war
+*.ear
 
-# C extensions
-*.so
+# exclude jar for gradle wrapper
+!gradle/wrapper/*.jar
 
-# Packages
-*.egg
-*.egg-info
-dist
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+
+# build files
+**/target
+target
+.gradle
 build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
-.installed.cfg
-lib
-lib64
-
-# Installer logs
-pip-log.txt
-
-# Unit test / coverage reports
-.coverage
-.tox
-nosetests.xml
-
-# Translations
-*.mo
-
-# Mr Developer
-.mr.developer.cfg
-.project
-.pydevproject
-.*~
-*.bak
-*.db
-*.sqlite
-*.db-journal
-nohup.out
-[a-z].json
-*.all.js
-*.all.css
-*.min.js
-*.min.css
-.git
-.git/FETCH_HEAD
-gtfsdb.db.bkup
-x
-.pydevproject
